--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <base href="/">
 </head>
 <body data-ng-app="app">
+    <navbar></navbar>
     <div data-ui-view data-ng-strict-di></div>
     <script src="vendor.js"></script> <!--External Libs-->
     <script src="app.js"></script> <!--The app code-->
