--- a/app/modules/homepage/homepage.html
+++ b/app/modules/homepage/homepage.html
@@ -1,4 +1,7 @@
 <div class="homepage" data-layout="column" data-layout-padding>
-    <h1>{{Home.helloWorld}}</h1>
-    <hello-world message="Home.componentMessage"></hello-world>
+    <div layout="row" data-layout-align="space-around" data-layout-padding data-layout-wrap>
+        <div ng-repeat="(chartName,chartData) in Home.chartData">
+            <plot chart-name="chartName" chart-data="chartData"></plot>
+        </div>
+    </div>
 </div>
