--- a/app/modules/homepage/homepage.html
+++ b/app/modules/homepage/homepage.html
@@ -1,5 +1,5 @@
 <div class="homepage" data-layout="column" data-layout-padding>
-    <div layout="row" data-layout-align="space-around" data-layout-padding data-layout-wrap>
+    <div layout="row" data-layout-align="space-around" data-layout-padding data-layout-wrap class="plots-container">
         <div ng-repeat="(chartName,chartData) in Home.chartData" flex="10">
             <plot chart-name="chartName" chart-data="chartData"></plot>
         </div>
