Add random fetching of new entries

--- a/app/modules/homepage/homepage.html
+++ b/app/modules/homepage/homepage.html
@@ -1,7 +1,7 @@
 <div class="homepage" data-layout="column" data-layout-padding>
     <div layout="row" data-layout-align="space-around" data-layout-padding data-layout-wrap class="plots-container">
         <div ng-repeat="(chartName,chartData) in Home.chartData" flex="10">
-            <plot chart-name="chartName" chart-data="chartData"></plot>
+            <plot chart-name="chartName" chart-data="chartData" new-entry="Home.newEntry"></plot>
         </div>
     </div>
 </div>
