Rename components and set up basic tab layout with abstract main state

--- a/app/modules/monitoring/monitoring.html
+++ b/app/modules/monitoring/monitoring.html
@@ -1,4 +1,4 @@
-<div class="homepage" data-layout="column" data-layout-padding>
+<div class="monitoring" data-layout="column" data-layout-padding>
     <ul>
         <li>Streams: {{Monitoring.streams.join(", ")}}</li>
         <li>Filters: {{Monitoring.filters.join(", ")}}</li>
