--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 </head>
 <body data-ng-app="app">
     <navbar></navbar>
-    <div data-ui-view data-ng-strict-di></div>
+    <div ui-view data-ng-strict-di></div>
     <script src="vendor.js"></script> <!--External Libs-->
     <script src="app.js"></script> <!--The app code-->
     <script src="main.js"></script> <!--Kicktarts the app-->
