--- a/app/modules/s3f/s3f.html
+++ b/app/modules/s3f/s3f.html
@@ -1,1 +1,8 @@
-S3F
+<div class="s3f" data-layout="row" data-layout-padding>
+    <div flex="33">
+        Hello
+    </div>
+    <div flex="66">
+        <sensors-map map-points="S3f.sensors"></sensors-map>
+    </div>
+</div>
