Rename S3f into S1i and vice versa

--- a/app/modules/s1i/s1i.html
+++ b/app/modules/s1i/s1i.html
@@ -1,26 +1,8 @@
-<div class="S1i" data-layout="column" data-layout-padding>
-    <h2 ng-if="S1i.data.length === 0">
-        Pas de données
-    </h2>
-    <div ng-if="S1i.data.length > 1">
-        <div>
-            <p class="yesterday" data-layout="row" data-layout-align="start center">
-                <span class="legend"></span>
-                <span>
-                    <b>Du</b> {{S1i.yesterday | date:'EEEE dd MMMM yyyy'}} <small><i>{{S1i.yesterday | date:'(HH:mm)'}}</i></small><br><b>Au</b> {{S1i.medianDate | date:'EEEE dd MMMM yyyy'}} <small><i>{{S1i.yesterday | date:'(HH:mm)'}}</i></small>
-                </span>
-            </p>
-            <p class="today" data-layout="row" data-layout-align="start center">
-                <span class="legend"></span>
-                <span>
-                    <b>Du</b> {{S1i.medianDate | date:'EEEE dd MMMM yyyy'}} <small><i>{{S1i.medianDate | date:'(HH:mm)'}}</i></small><br><b>Au</b> {{S1i.today | date:'EEEE dd MMMM yyyy'}} <small><i>{{S1i.medianDate | date:'(HH:mm)'}}</i></small>
-                </span>
-            </p>
-        </div>
-        <div layout="row" data-layout-align="space-around" data-layout-padding data-layout-wrap class="plots-container">
-            <div ng-repeat="(chartName,chartData) in S1i.chartData" flex="20">
-                <plot chart-name="chartName" chart-data="chartData" new-entry="S1i.newEntry"></plot>
-            </div>
-        </div>
+<div class="s1i" data-layout="row" data-layout-padding>
+    <div flex="33">
+        Hello
+    </div>
+    <div flex="66">
+        <sensors-map map-points="S1i.sensors"></sensors-map>
     </div>
 </div>
