Use circles instead of OMS + plus websocket and dynamic colors to the sectors map

--- a/app/modules/s1i/s1i.html
+++ b/app/modules/s1i/s1i.html
@@ -12,6 +12,6 @@
         </div>
     </div>
     <div flex="66">
-        <sensors-map map-points="S1i.sensors"></sensors-map>
+        <sensors-map map-points="S1i.sensors" latest-value="S1i.latestValue"></sensors-map>
     </div>
 </div>
