Adding monitoring panel with a first shot of rendering

--- a/app/modules/monitoring/monitoring.html
+++ b/app/modules/monitoring/monitoring.html
@@ -3,5 +3,5 @@
         <li>Streams: {{Monitoring.streams.join(", ")}}</li>
         <li>Filters: {{Monitoring.filters.join(", ")}}</li>
     </ul>
-
+    <network streams="Monitoring.streams" filters="Monitoring.filters"></network>
 </div>
