monitoring: adding metrics

--- a/app/modules/monitoring/monitoring.html
+++ b/app/modules/monitoring/monitoring.html
@@ -1,7 +1,7 @@
 <div class="monitoring" data-layout="column" data-layout-padding>
-    <ul>
-        <li>Streams: {{Monitoring.streams.join(", ")}}</li>
-        <li>Filters: {{Monitoring.filters.join(", ")}}</li>
-    </ul>
-    <network streams="Monitoring.streams" filters="Monitoring.filters"></network>
+    <!--<ul>-->
+        <!--<li>Streams: {{Monitoring.streams.join(", ")}}</li>-->
+        <!--<li>Filters: {{Monitoring.filters.join(", ")}}</li>-->
+    <!--</ul>-->
+    <network streams="Monitoring.streams" filters="Monitoring.filters" network-status="Monitoring.networkStatus" metric-units="Monitoring.metricUnits" metric-selection="Monitoring.metricSelection"></network>
 </div>
