--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Waves</title>
+    <!-- Google Material icons-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body data-ng-app="app">
     <navbar></navbar>
