Rename dashboardComponent into componentCreation

--- a/app/modules/dashboard/dashboard.html
+++ b/app/modules/dashboard/dashboard.html
@@ -1,9 +1,9 @@
 <div class="dashboard-container">
     <div layout="row" layout-padding layout-wrap>
         <h1 class="md-display-1" flex="100">My Dashboard</h1>
-        <dashboard-component flex-gt-sm="50" flex-sm="100"></dashboard-component>
-        <dashboard-component flex-gt-sm="50" flex-sm="100"></dashboard-component>
-        <dashboard-component flex-gt-sm="50" flex-sm="100"></dashboard-component>
-        <dashboard-component flex-gt-sm="50" flex-sm="100"></dashboard-component>
+        <component-creation flex-gt-sm="50" flex-sm="100"></component-creation>
+        <component-creation flex-gt-sm="50" flex-sm="100"></component-creation>
+        <component-creation flex-gt-sm="50" flex-sm="100"></component-creation>
+        <component-creation flex-gt-sm="50" flex-sm="100"></component-creation>
     </div>
 </div>
