Display empty widget with config when done

--- a/app/modules/dashboard/dashboard.html
+++ b/app/modules/dashboard/dashboard.html
@@ -1,9 +1,38 @@
 <div class="dashboard-container">
     <div layout="row" layout-padding layout-wrap>
         <h1 class="md-display-1" flex="100">My Dashboard</h1>
-        <component-creation flex-gt-sm="50" flex-sm="100"></component-creation>
-        <component-creation flex-gt-sm="50" flex-sm="100"></component-creation>
-        <component-creation flex-gt-sm="50" flex-sm="100"></component-creation>
-        <component-creation flex-gt-sm="50" flex-sm="100"></component-creation>
+
+        <div flex-gt-sm="50" flex-sm="100">
+            <component-creation sensors="Dashboard.sensors" ng-if="!Dashboard.widget1Active" component-id="1" on-active="Dashboard.activeWidget(id, config)"></component-creation>
+            <div ng-if="Dashboard.widget1Active">
+                <line-chart-widget widget-config="Dashboard.widget1Config" ng-if="Dashboard.widget1Config._type === 'LineChart'"></line-chart-widget>
+                <map-chart-widget widget-config="Dashboard.widget1Config" ng-if="Dashboard.widget1Config._type === 'MapChart'"></map-chart-widget>
+            </div>
+        </div>
+
+        <div flex-gt-sm="50" flex-sm="100">
+            <component-creation sensors="Dashboard.sensors" ng-if="!Dashboard.widget2Active" component-id="2" on-active="Dashboard.activeWidget(id, config)"></component-creation>
+            <div ng-if="Dashboard.widget2Active">
+                <line-chart-widget widget-config="Dashboard.widget2Config" ng-if="Dashboard.widget2Config._type === 'LineChart'"></line-chart-widget>
+                <map-chart-widget widget-config="Dashboard.widget2Config" ng-if="Dashboard.widget2Config._type === 'MapChart'"></map-chart-widget>
+            </div>
+        </div>
+
+        <div flex-gt-sm="50" flex-sm="100">
+            <component-creation sensors="Dashboard.sensors" ng-if="!Dashboard.widget3Active" component-id="3" on-active="Dashboard.activeWidget(id, config)"></component-creation>
+            <div ng-if="Dashboard.widget3Active">
+                <line-chart-widget widget-config="Dashboard.widget3Config" ng-if="Dashboard.widget3Config._type === 'LineChart'"></line-chart-widget>
+                <map-chart-widget widget-config="Dashboard.widget3Config" ng-if="Dashboard.widget3Config._type === 'MapChart'"></map-chart-widget>
+            </div>
+        </div>
+
+        <div flex-gt-sm="50" flex-sm="100">
+            <component-creation sensors="Dashboard.sensors" ng-if="!Dashboard.widget4Active" component-id="4" on-active="Dashboard.activeWidget(id, config)"></component-creation>
+            <div ng-if="Dashboard.widget4Active">
+                <line-chart-widget widget-config="Dashboard.widget4Config" ng-if="Dashboard.widget4Config._type === 'LineChart'"></line-chart-widget>
+                <map-chart-widget widget-config="Dashboard.widget4Config" ng-if="Dashboard.widget4Config._type === 'MapChart'"></map-chart-widget>
+            </div>
+        </div>
+
     </div>
 </div>
