--- a/app/modules/dashboard/dashboard.html
+++ b/app/modules/dashboard/dashboard.html
@@ -2,7 +2,7 @@
     <div layout="row" layout-padding layout-wrap>
         <h1 class="md-display-1" flex="100">My Dashboard</h1>
 
-        <div flex-gt-sm="50" flex-sm="100">
+        <div class="widget-wrapper" flex-gt-sm="50" flex-sm="100">
             <component-creation sensors="Dashboard.sensors" ng-if="!Dashboard.widget1Active" component-id="1" on-active="Dashboard.activeWidget(id, config)"></component-creation>
             <div ng-if="Dashboard.widget1Active">
                 <line-chart-widget latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget1Config" ng-if="Dashboard.widget1Config._type === 'LineChart'"></line-chart-widget>
@@ -10,7 +10,7 @@
             </div>
         </div>
 
-        <div flex-gt-sm="50" flex-sm="100">
+        <div class="widget-wrapper" flex-gt-sm="50" flex-sm="100" ng-class="{disabled: !Dashboard.widget1Active}">
             <component-creation sensors="Dashboard.sensors" ng-if="!Dashboard.widget2Active" component-id="2" on-active="Dashboard.activeWidget(id, config)"></component-creation>
             <div ng-if="Dashboard.widget2Active">
                 <line-chart-widget latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget2Config" ng-if="Dashboard.widget2Config._type === 'LineChart'"></line-chart-widget>
@@ -18,7 +18,7 @@
             </div>
         </div>
 
-        <div flex-gt-sm="50" flex-sm="100">
+        <div class="widget-wrapper" flex-gt-sm="50" flex-sm="100" ng-if="Dashboard.widget1Active" ng-class="{disabled: Dashboard.widget1Active && !Dashboard.widget2Active}">
             <component-creation sensors="Dashboard.sensors" ng-if="!Dashboard.widget3Active" component-id="3" on-active="Dashboard.activeWidget(id, config)"></component-creation>
             <div ng-if="Dashboard.widget3Active">
                 <line-chart-widget latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget3Config" ng-if="Dashboard.widget3Config._type === 'LineChart'"></line-chart-widget>
@@ -26,7 +26,7 @@
             </div>
         </div>
 
-        <div flex-gt-sm="50" flex-sm="100">
+        <div class="widget-wrapper" flex-gt-sm="50" flex-sm="100" ng-if="Dashboard.widget2Active" ng-class="{disabled: Dashboard.widget2Active && !Dashboard.widget3Active}">
             <component-creation sensors="Dashboard.sensors" ng-if="!Dashboard.widget4Active" component-id="4" on-active="Dashboard.activeWidget(id, config)"></component-creation>
             <div ng-if="Dashboard.widget4Active">
                 <line-chart-widget latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget4Config" ng-if="Dashboard.widget4Config._type === 'LineChart'"></line-chart-widget>
