Plug dynamic metrics to map chart widget

--- a/app/modules/dashboard/dashboard.html
+++ b/app/modules/dashboard/dashboard.html
@@ -6,7 +6,7 @@
             <component-creation sensors="Dashboard.sensors" ng-if="!Dashboard.widget1Active" component-id="1" on-active="Dashboard.activeWidget(id, config)"></component-creation>
             <div ng-if="Dashboard.widget1Active">
                 <line-chart-widget latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget1Config" ng-if="Dashboard.widget1Config._type === 'LineChart'"></line-chart-widget>
-                <map-chart-widget latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget1Config" ng-if="Dashboard.widget1Config._type === 'MapChart'" sensors="Dashboard.sensors"></map-chart-widget>
+                <map-chart-widget widget-id="1" latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget1Config" ng-if="Dashboard.widget1Config._type === 'MapChart'" sensors="Dashboard.sensors"></map-chart-widget>
             </div>
         </div>
 
@@ -14,7 +14,7 @@
             <component-creation sensors="Dashboard.sensors" ng-if="!Dashboard.widget2Active" component-id="2" on-active="Dashboard.activeWidget(id, config)"></component-creation>
             <div ng-if="Dashboard.widget2Active">
                 <line-chart-widget latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget2Config" ng-if="Dashboard.widget2Config._type === 'LineChart'"></line-chart-widget>
-                <map-chart-widget latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget2Config" ng-if="Dashboard.widget2Config._type === 'MapChart'" sensors="Dashboard.sensors"></map-chart-widget>
+                <map-chart-widget widget-id="2" latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget2Config" ng-if="Dashboard.widget2Config._type === 'MapChart'" sensors="Dashboard.sensors"></map-chart-widget>
             </div>
         </div>
 
@@ -22,7 +22,7 @@
             <component-creation sensors="Dashboard.sensors" ng-if="!Dashboard.widget3Active" component-id="3" on-active="Dashboard.activeWidget(id, config)"></component-creation>
             <div ng-if="Dashboard.widget3Active">
                 <line-chart-widget latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget3Config" ng-if="Dashboard.widget3Config._type === 'LineChart'"></line-chart-widget>
-                <map-chart-widget latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget3Config" ng-if="Dashboard.widget3Config._type === 'MapChart'" sensors="Dashboard.sensors"></map-chart-widget>
+                <map-chart-widget widget-id="3" latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget3Config" ng-if="Dashboard.widget3Config._type === 'MapChart'" sensors="Dashboard.sensors"></map-chart-widget>
             </div>
         </div>
 
@@ -30,7 +30,7 @@
             <component-creation sensors="Dashboard.sensors" ng-if="!Dashboard.widget4Active" component-id="4" on-active="Dashboard.activeWidget(id, config)"></component-creation>
             <div ng-if="Dashboard.widget4Active">
                 <line-chart-widget latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget4Config" ng-if="Dashboard.widget4Config._type === 'LineChart'"></line-chart-widget>
-                <map-chart-widget latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget4Config" ng-if="Dashboard.widget4Config._type === 'MapChart'" sensors="Dashboard.sensors"></map-chart-widget>
+                <map-chart-widget widget-id="4" latest-entry="Dashboard.latestEntry" widget-config="Dashboard.widget4Config" ng-if="Dashboard.widget4Config._type === 'MapChart'" sensors="Dashboard.sensors"></map-chart-widget>
             </div>
         </div>
 
