--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
 <body data-ng-app="app">
     <navbar></navbar>
     <div ui-view data-ng-strict-di></div>
+    <div class="global-dropback" ng-if="displayDropback" ng-click="displayDropback()"></div>
     <script src="vendor.js"></script> <!--External Libs-->
     <script src="app.js"></script> <!--The app code-->
     <script src="main.js"></script> <!--Kicktarts the app-->
