Add mocked-up event alert component

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 </head>
 <body data-ng-app="app">
     <navbar></navbar>
+    <event-alert></event-alert>
     <div ui-view data-ng-strict-di></div>
     <div class="global-dropback" ng-if="displayDropback" ng-click="displayDropback()"></div>
     <script src="vendor.js"></script> <!--External Libs-->
