--- a/app/modules/monitoring/monitoring.html
+++ b/app/modules/monitoring/monitoring.html
@@ -3,5 +3,5 @@
         <!--<li>Streams: {{Monitoring.streams.join(", ")}}</li>-->
         <!--<li>Filters: {{Monitoring.filters.join(", ")}}</li>-->
     <!--</ul>-->
-    <network streams="Monitoring.streams" filters="Monitoring.filters" network-status="Monitoring.networkStatus" metric-units="Monitoring.metricUnits" metric-selection="Monitoring.metricSelection"></network>
+    <network streams="Monitoring.streams" filters="Monitoring.filters" metric-units="Monitoring.metricUnits" metric-selection="Monitoring.metricSelection"></network>
 </div>
